show/hide deposit / withdraw buttons

--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -164,9 +164,9 @@
         <h1>Overview <small> Your overview</small></h1>
       </div>
       <div class="col-md-6">
-        <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#depositModal">Deposit
+        <button id="depositBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#depositModal">Deposit
         </button>
-        <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw
+        <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right hide" data-toggle="modal" data-target="#withdrawModal">Withdraw
         </button>
       </div>
       <div class="col-md-12">
