--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -102,7 +102,7 @@
 
 
                <ul class="dropdown-menu">
-                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li><a id="settings" href="userdashboard_settings" rel="keep-params"><i class="fa fa-gear"></i> Settings</a></li>
                  <li class="divider"></li>
                  <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
@@ -472,6 +472,7 @@
 
       <!-- my scripts -->
       <script src="tools.js"></script>
+
       <script src="highcharts_templates.js"></script>
       <script src="userdashboard.js"></script>
       <script src="userdashboard_overview.js"></script>
