--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -102,7 +102,7 @@
 
 
              <ul class="dropdown-menu">
-             <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+             <li><a id="settings" href="userdashboard_settings" rel="keep-params"><i class="fa fa-gear"></i> Settings</a></li>
              <li class="divider"></li>
              <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
