--- a/resources/web/creator_funds.html
+++ b/resources/web/creator_funds.html
@@ -102,15 +102,15 @@
            	<li id="userDropdown" class="dropdown user-dropdown">
 
            		<script id="usernameTemplate" type="x-tmpl-mustache">  
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-               <ul class="dropdown-menu">
-               <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-               <li class="divider"></li>
-               <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+                 <ul class="dropdown-menu">
+                   <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                   <li class="divider"></li>
+                   <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-               </ul>
+                 </ul>
                </script>
              </li>
            </ul>
@@ -135,12 +135,12 @@
            <a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
          </li>
-       <a class="list-group-item" href="creator_pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
-       <a class="list-group-item" href="creator_worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
-       <a class="list-group-item" href="creator_rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
-       <a class="list-group-item active" href="creator_funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
-       <a class="list-group-item" href="creator_pieces" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Pieces</a>
-       <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
+         <a class="list-group-item" href="creator_pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
+         <a class="list-group-item" href="creator_worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
+         <a class="list-group-item" href="creator_rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
+         <a class="list-group-item active" href="creator_funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
+         <a class="list-group-item" href="creator_pieces" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Pieces</a>
+         <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
        </div>
      </div>        
    </div>
@@ -215,37 +215,43 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Transactions</h3>
       </div>
-      <div id="creators_transactions" class="panel-body">
+      <div id="creators_transactions" class="panel-body" style="height: 276px;overflow:auto;">
         <script id="creators_transactions_template" type="x-tmpl-mustache"> 
-        <table id="creators_transactions_table" class="table table-hover table-striped tablesorter">
-        <thead> 
-        <tr>
-        <th>Time <i class="fa fa-sort"></i></th>
-        <th>Type <i class="fa fa-sort"></th>
-        <th>Recipient <i class="fa fa-sort"></th>
-        <th>Funds <i class="fa fa-sort"></th>
-        </tr>
-        </thead>
+          <table id="creators_transactions_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Time <i class="fa fa-sort"></i></th>
+                <th>Type <i class="fa fa-sort"></th>
+                <th>Recipient <i class="fa fa-sort"></th>
+                <th>Funds <i class="fa fa-sort"></th>
+              </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        {{#.}}
+              {{#.}}
 
-        <tr> 
-        <td>{{time_}}</td>
-        <td>{{type}}</td>
-        <td>{{recipient}}</td>
-        <td>{{funds}}</td>
-        </tr>
-        {{/.}}
+              <tr> 
+                <td>{{time_}}</td>
+                <td>{{type}}</td>
+                <td>{{recipient}}</td>
+                <td>{{funds}}</td>
+              </tr>
+              {{/.}}
 
-        </tbody>
-        </script>
-      </table>
+            </tbody>
+          </script>
+        </table>
 
+      </div>
+      <div class="panel-footer">
+        <ul class="pager">
+          <li id="creators_transactions_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="creators_transactions_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
 </div><!-- /.row -->
 </div>
