--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -87,9 +87,9 @@
                   <li><a href="#">Separated link</a></li>
                   <li><a href="#">One more separated link</a></li>
                 </ul>
-               </li>
-             </ul>
-             <form id="creator_search" class="navbar-form navbar-left" role="search">
+              </li>
+            </ul>
+            <form id="creator_search" class="navbar-form navbar-left" role="search">
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
@@ -101,15 +101,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -145,10 +145,10 @@
    </div>        
  </div>
 
-   <!-- stop plugging in -->
+ <!-- stop plugging in -->
 
 
-   <!-- Sidebar -->
+ <!-- Sidebar -->
 <!--   <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
       <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
@@ -214,74 +214,86 @@
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Pieces issued</h3>
       </div>
-      <div id="pieces_issued" class="panel-body">
+      <div id="pieces_issued" class="panel-body" style="height: 276px;overflow:auto;">
         <script id="pieces_issued_template" type="x-tmpl-mustache"> 
-        <table id="pieces_issued_table" class="table table-hover table-striped tablesorter">
-        <thead> 
-        <tr>
-        <th>Time <i class="fa fa-sort"></i></th>
-        <th>Pieces issued <i class="fa fa-sort"></th>
-        <th>Price per piece <i class="fa fa-sort"></th>
-        </tr>
-        </thead>
+          <table id="pieces_issued_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Time <i class="fa fa-sort"></i></th>
+                <th>Pieces issued <i class="fa fa-sort"></th>
+                <th>Price per piece <i class="fa fa-sort"></th>
+              </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        {{#.}}
+              {{#.}}
 
-        <tr> 
-        <td>{{time_}}</td>
-        <td>{{pieces_issued}}</td>
-        <td>{{price_per_piece}}</td>
-        </tr>
-        {{/.}}
+              <tr> 
+                <td>{{time_}}</td>
+                <td>{{pieces_issued}}</td>
+                <td>{{price_per_piece}}</td>
+              </tr>
+              {{/.}}
 
-        </tbody>
-        </script>
-      </table>
+            </tbody>
+          </script>
+        </table>
 
+      </div>
+      <div class="panel-footer">
+        <ul class="pager">
+          <li id="pieces_issued_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="pieces_issued_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
 
 </div><!-- /.row -->
 <div class="row">
-    <div class="col-md-6">
+  <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Backers</h3>
       </div>
-      <div id="backers_current" class="panel-body">
+      <div id="backers_current" class="panel-body" style="height: 276px;overflow:auto;">
         <script id="backers_current_template" type="x-tmpl-mustache"> 
-        <table id="backers_current_table" class="table table-hover table-striped tablesorter">
-        <thead> 
-        <tr>
-        <th>Name <i class="fa fa-sort"></i></th>
-        <th>Pieces <i class="fa fa-sort"></th>
-        <th>Value($) <i class="fa fa-sort"></th>
-        </tr>
-        </thead>
+          <table id="backers_current_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Name <i class="fa fa-sort"></i></th>
+                <th>Pieces <i class="fa fa-sort"></th>
+                <th>Value($) <i class="fa fa-sort"></th>
+              </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        {{#.}}
+              {{#.}}
 
-        <tr> 
-        <td>{{users_username}}</td>
-        <td>{{pieces_total}}</td>
-        <td>{{value_total_current}}</td>
-        </tr>
-        {{/.}}
+              <tr> 
+                <td>{{users_username}}</td>
+                <td>{{pieces_total}}</td>
+                <td>{{value_total_current}}</td>
+              </tr>
+              {{/.}}
 
-        </tbody>
-        </script>
-      </table>
+            </tbody>
+          </script>
+        </table>
 
+      </div>
+      <div class="panel-footer">
+        <ul class="pager">
+          <li id="backers_current_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="backers_current_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
-  </div>
 </div>
 
 
