--- a/resources/web/creator_rewards.html
+++ b/resources/web/creator_rewards.html
@@ -87,9 +87,9 @@
                   <li><a href="#">Separated link</a></li>
                   <li><a href="#">One more separated link</a></li>
                 </ul>
-               </li>
-             </ul>
-             <form id="creator_search" class="navbar-form navbar-left" role="search">
+              </li>
+            </ul>
+            <form id="creator_search" class="navbar-form navbar-left" role="search">
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
@@ -101,15 +101,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -145,10 +145,10 @@
    </div>        
  </div>
 
-   <!-- stop plugging in -->
+ <!-- stop plugging in -->
 
 
-   <!-- Sidebar -->
+ <!-- Sidebar -->
 <!--   <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
       <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
@@ -164,7 +164,7 @@
   <!-- The Page -->
   <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
 
- <div class="row">
+   <div class="row">
     <div class="col-md-12">
 
       <div class="col-md-6">
@@ -190,75 +190,87 @@
     </ol>
   </div>
 </div>
- <!-- a big ass chart -->
+<!-- a big ass chart -->
 
 
 <div class="row"> 
   <div class="col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards interest rate</h3>
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards per piece per year</h3>
       </div>
-      <div id="rewards_pct" class="panel-body">
-        <script id="rewards_pct_template" type="x-tmpl-mustache"> 
-        <table id="rewards_pct_table" class="table table-hover table-striped tablesorter">
-        <thead> 
-        <tr>
-        <th>Time <i class="fa fa-sort"></i></th>
-        <th>Reward <i class="fa fa-sort"></th>
-        </tr>
-        </thead>
+      <div id="rewards" class="panel-body" style="height: 276px;overflow:auto;">
+        <script id="rewards_template" type="x-tmpl-mustache"> 
+          <table id="rewards_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Time <i class="fa fa-sort"></i></th>
+                <th>Reward <i class="fa fa-sort"></th>
+              </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        {{#.}}
+              {{#.}}
 
-        <tr> 
-        <td>{{time_}}</td>
-        <td>{{reward_percentage}}</td>
-        </tr>
-        {{/.}}
+              <tr> 
+                <td>{{time_}}</td>
+                <td>{{reward_per_piece_per_year}}</td>
+              </tr>
+              {{/.}}
 
-        </tbody>
-        </script>
-      </table>
+            </tbody>
+          </script>
+        </table>
 
+      </div>
+      <div class="panel-footer">
+        <ul class="pager">
+          <li id="rewards_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="rewards_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="col-md-6">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards paid to users</h3>
+  <div class="col-md-6">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Rewards paid to users</h3>
+      </div>
+      <div id="rewards_owed_to_user" class="panel-body" style="height: 276px;overflow:auto;">
+        <script id="rewards_owed_to_user_template" type="x-tmpl-mustache"> 
+          <table id="rewards_owed_to_user_table" class="table table-hover table-striped tablesorter">
+            <thead> 
+              <tr>
+                <th>Owner <i class="fa fa-sort"></i></th>
+                <th>Total Paid <i class="fa fa-sort"></th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+              {{#.}}
+
+              <tr> 
+                <td>{{owners_name}}</td>
+                <td>{{total_owed}}</td>
+              </tr>
+              {{/.}}
+
+            </tbody>
+          </script>
+        </table>
+
+      </div>
+         <div class="panel-footer">
+        <ul class="pager">
+          <li id="rewards_owed_to_user_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+          <li id="rewards_owed_to_user_pager_next" ><a href="javascript:void(0);">Next</a></li>
+        </ul>
+      </div>
     </div>
-    <div id="rewards_owed_to_user" class="panel-body">
-      <script id="rewards_owed_to_user_template" type="x-tmpl-mustache"> 
-      <table id="rewards_owed_to_user_table" class="table table-hover table-striped tablesorter">
-      <thead> 
-      <tr>
-      <th>Owner <i class="fa fa-sort"></i></th>
-      <th>Total Paid <i class="fa fa-sort"></th>
-      </tr>
-      </thead>
-
-      <tbody>
-
-      {{#.}}
-
-      <tr> 
-      <td>{{owners_name}}</td>
-      <td>{{total_owed}}</td>
-      </tr>
-      {{/.}}
-
-      </tbody>
-      </script>
-    </table>
-
   </div>
-</div>
-</div>
 
 </div>
 
