--- a/resources/web/discover.html
+++ b/resources/web/discover.html
@@ -98,15 +98,15 @@
             <li id="userDropdown" class="dropdown user-dropdown">
 
              <script id="usernameTemplate" type="x-tmpl-mustache">  
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-             <ul class="dropdown-menu">
-             <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-             <li class="divider"></li>
-             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+               <ul class="dropdown-menu">
+                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-             </ul>
+               </ul>
              </script>
            </li>
          </ul>
@@ -152,7 +152,7 @@
       <div class="row">
 
         <form id="discover_search" class="form-inline" role="form">
-      
+
           <h3 for="category" class="form-group col-xs-2 text"> Show me </h3>
 
 
@@ -161,12 +161,12 @@
 
             <script id="categories_template" type="x-tmpl-mustache"> 
 
-            <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
-            <option value="All">All</option>
-            {{#.}}
-            <option value='{{name}}'>{{name}}</option>
-            {{/.}}
-            </select>
+              <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
+                <option value="All">All</option>
+                {{#.}}
+                <option value='{{name}}'>{{name}}</option>
+                {{/.}}
+              </select>
 
             </script>
           </div>
@@ -177,42 +177,52 @@
       </div>
       <hr></hr>
       <div class="row"> 
-        <div class="col-md-6">
+      <div class="col-md-12">
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Creators</h3>
             </div>
-            <div id="discover_creators" class="panel-body">
+            <div id="discover_creators" class="panel-body" style="height: 80vh;overflow:auto;">
               <script id="discover_creators_template" type="x-tmpl-mustache"> 
-              <table id="discover_creators_table" class="table table-hover table-striped tablesorter">
-              <thead> 
-              <tr>
-              <th>Creator <i class="fa fa-sort"></i></th>
-              <th>Category <i class="fa fa-sort"></i></th>
-              <th>Worth <i class="fa fa-sort"></th>
-              <th># of Backers <i class="fa fa-sort"></th>
-              <th>Reward Pct <i class="fa fa-sort"></th>
-              </tr>
-              </thead>
+                <table id="discover_creators_table" class="table table-hover table-striped tablesorter">
+                  <thead>
+                    <tr>
+                      <th>Creator <i class="fa fa-sort"></i></th>
+                      <th>Category <i class="fa fa-sort"></i></th>
+                      <th># of Backers <i class="fa fa-sort"></th>
+                      <th>Worth <i class="fa fa-sort"></th>
+                      <th>Price/piece <i class="fa fa-sort"></th>
+                      <th>Reward/piece/year <i class="fa fa-sort"></th>
+                      <th>Reward yield <i class="fa fa-sort"></th>
+                    </tr>
+                  </thead>
 
-              <tbody>
+                  <tbody>
 
-              {{#.}}
+                    {{#.}}
 
-              <tr> 
-              <td><a href="creator_overview?creator={{creators_name}}"> {{creators_name}} </a></td>
-              <td>{{category_names}}</td>
-              <td>{{worth_current}}</td>
-              <td>{{number_of_backers}}</td>
-              <td>{{reward_pct}}</td>
-              </tr>
-              {{/.}}
+                    <tr> 
+                      <td><a href="creator_overview?creator={{creators_name}}"> {{creators_name}} </a></td>
+                      <td>{{category_names}}</td>
+                      <td>{{number_of_backers}}</td>
+                      <td>{{worth_current}}</td>
+                      <td>{{price_current}}</td>
+                      <td>{{reward_per_piece_per_year}}</td>
+                      <td>{{reward_yield_current}}</td>
+                    </tr>
+                    {{/.}}
 
-              </tbody>
+                  </tbody>
 
-              </table>
+                </table>
               </script>
 
+            </div>
+            <div class="panel-footer">
+              <ul class="pager">
+                <li id="discover_creators_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+                <li id="discover_creators_pager_next" ><a href="javascript:void(0);">Next</a></li>
+              </ul>
             </div>
           </div>
         </div>
