Changed some navigation stuff

--- a/resources/dev/web/creator_worth.html
+++ b/resources/dev/web/creator_worth.html
@@ -11,34 +11,34 @@
 	<title>Dashboard Template for Bootstrap</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="../darkly.bootstrap.min.css" rel="stylesheet">
+	<link href="darkly.bootstrap.min.css" rel="stylesheet">
 
 	<!-- Link to font awesome -->
-	<link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
 	<!-- Bootstrap social css -->
-	<link href="../bootstrap-social-gh-pages/bootstrap-social.css" rel="stylesheet">
+	<link href="bootstrap-social-gh-pages/bootstrap-social.css" rel="stylesheet">
 
 	<!--   Bootstrap validator -->
-	<link rel="stylesheet" href="../bootstrap-validator/dist/css/bootstrapValidator.min.css"/>
+	<link rel="stylesheet" href="bootstrap-validator/dist/css/bootstrapValidator.min.css"/>
 
 	<!--   toastr css -->
-	<link href="../toastr/toastr.css" rel="stylesheet"/>
+	<link href="toastr/toastr.css" rel="stylesheet"/>
 
 	<!--   typeahead css -->
-	<link href="../typeaheadjs.css" rel="stylesheet"/>
+	<link href="typeaheadjs.css" rel="stylesheet"/>
 
 	<!-- Pickadate -->
-	<link href="../pickadate/lib/themes/default.css" rel="stylesheet"/>
-	<link href="../pickadate/lib/themes/default.date.css" rel="stylesheet"/>
+	<link href="pickadate/lib/themes/default.css" rel="stylesheet"/>
+	<link href="pickadate/lib/themes/default.date.css" rel="stylesheet"/>
 
 	<!-- This main css -->
-	<link href="../userdashboard.css" rel="stylesheet">
+	<link href="userdashboard.css" rel="stylesheet">
 
 
 
 	<!-- Just for debugging purposes. Don't actually copy this line! -->
-	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+	<!--[if lt IE 9]><script src="assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -70,9 +70,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        <ul class="nav navbar-nav">
-        <li><a href="/carousel">Home</a></li>
-        <li><a href="/discover">Discover</a></li>
-        <li><a href="/creators">Creators</a></li>
+        <li><a href="carousel">Home</a></li>
+        <li><a href="discover">Discover</a></li>
+        <li><a href="creators">Creators</a></li> 
         <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
@@ -461,27 +461,27 @@
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="../jquery-1.11.1.min.js"></script>
-      <script src="../bootstrap-dist/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="../bootstrap-validator/dist/js/bootstrapValidator.js"></script>
-      <script src="../toastr/toastr.js"></script>
-      <script src="../mustache/mustache.js"></script>
-      <script src="../holder/holder.js"></script>
-      <script src="../json.date-extensions.js"></script>
-      <script src="../tablesorter/jquery.tablesorter.js"></script> 
-      <script src="../highcharts/js/highcharts.js"></script>
-      <script src="../highcharts/js//modules/exporting.js"></script>
-      <script src="../highcharts/js/themes/dark-unica.js"></script>
-      <script src="../typeahead.js/typeahead.bundle.js"></script>
-      <script src="../pickadate/lib/picker.js"></script>
-      <script src="../pickadate/lib/picker.date.js"></script>
+      <script src="jquery-1.11.1.min.js"></script>
+      <script src="bootstrap-dist/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="bootstrap-validator/dist/js/bootstrapValidator.js"></script>
+      <script src="toastr/toastr.js"></script>
+      <script src="mustache/mustache.js"></script>
+      <script src="holder/holder.js"></script>
+      <script src="json.date-extensions.js"></script>
+      <script src="tablesorter/jquery.tablesorter.js"></script> 
+      <script src="highcharts/js/highcharts.js"></script>
+      <script src="highcharts/js//modules/exporting.js"></script>
+      <script src="highcharts/js/themes/dark-unica.js"></script>
+      <script src="typeahead.js/typeahead.bundle.js"></script>
+      <script src="pickadate/lib/picker.js"></script>
+      <script src="pickadate/lib/picker.date.js"></script>
 
       <!-- my scripts -->
-      <script src="../tools.js"></script>
-      <script src="../highcharts_templates.js"></script>
-      <script src="../creatorpage.js"></script>
-      <script src="../creator_worth.js"></script>
-      <script src="../login.js"></script>
+      <script src="tools.js"></script>
+      <script src="highcharts_templates.js"></script>
+      <script src="creatorpage.js"></script>
+      <script src="creator_worth.js"></script>
+      <script src="login.js"></script>
 
 
     </body>
