--- a/resources/dev/web/creatorpage_template_old_backup.html
+++ b/resources/dev/web/creatorpage_template_old_backup.html
@@ -58,8 +58,8 @@
  				</div>
  				<div class="navbar-collapse collapse">
  					<ul class="nav navbar-nav">
- 						<li><a href="/carousel">Home</a></li>
- 						<li><a href="/discover">Discover</a></li>
+ 						<li><a href="carousel">Home</a></li>
+ 						<li><a href="discover">Discover</a></li>
  						<li class="active"><a href="/creators">Creators</a></li>
  						<li><a href="/userdashboard" id="dashboardhref" class="hide">Dashboard</a></li>
  						<li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
