--- a/resources/dev/web/creator_overview.html
+++ b/resources/dev/web/creator_overview.html
@@ -806,7 +806,7 @@
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward Percentage</label>
             <div class="col-sm-10">
-              <input name="reward_pct" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
+              <input name="reward" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
               data-bv-greaterthan="true"
               data-bv-greaterthan-value="1"
               data-bv-greaterthan-message="Must be > 1" 
