--- a/resources/dev/web/creators.html
+++ b/resources/dev/web/creators.html
@@ -422,9 +422,9 @@
       <form id="raiseFundsForm" class="form-horizontal" role="form">
 
         <div class="form-group form-group-lg">
-          <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward Percentage</label>
+          <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
           <div class="col-sm-10">
-            <input name="reward_pct" class="form-control" type="text" id="formGroupInputLarge" value="1.0"
+            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" value="1.0"
 
             data-bv-notempty="true"
             data-bv-notempty-message="Must be > 1"
