--- a/resources/dev/web/creators.html
+++ b/resources/dev/web/creators.html
@@ -424,14 +424,14 @@
         <div class="form-group form-group-lg">
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
           <div class="col-sm-10">
-            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" value="1.0"
+            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="$1/piece/year"
 
             data-bv-notempty="true"
-            data-bv-notempty-message="Must be > 1"
+            data-bv-notempty-message="Must be > 0"
 
             data-bv-greaterthan="true"
-            data-bv-greaterthan-value="1"
-            data-bv-greaterthan-message="Must be > 1" 
+            data-bv-greaterthan-value="0"
+            data-bv-greaterthan-message="Must be > 0" 
 
             >
           </div>
