--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -438,11 +438,69 @@
       <div id="deposit_div" class="modal-body">
        <script id="deposit_template" type="x-tmpl-mustache">
         <iframe src="https://coinbase.com/inline_payments/{{.}}" style="width: 500px; height: 160px; border: none; box-shadow: 0 1px 3px rgba(0,0,0,0.25); overflow: hidden;" scrolling="no" allowtransparency="true" frameborder="0"></iframe>
-        </script>
-      </div>
-
+      </script>
     </div>
+
   </div>
+</div>
+</div>
+
+
+<div id="withdrawModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">withdraw</h4>
+      </div>
+      <div class="modal-body">
+        <form id="withdrawForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
+            <div class="col-sm-10">
+              <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-value=".01"
+              data-bv-greaterthan-message="Must be > .01"
+              >
+            </div>
+
+
+          </div>
+
+          <div class="form-group form-group-lg">
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Bitcoin Address</label>
+
+
+           <div class="col-sm-10">
+           <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+             data-bv-notempty="true"
+             data-bv-notempty-message="Address cannot be empty">
+           </div>
+         </div>
+
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Your Funds</label>
+           <div id="funds" class="col-sm-10 form-control-static">
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds After</label>
+           <div id="fundsLeft" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+         <button id="withdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
+
+       </form>
+     </div>
+
+   </div>
+ </div>
 </div>
 
 
