--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -474,8 +474,7 @@
 
            <div class="col-sm-10">
            <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
-             data-bv-notempty="true"
-             data-bv-notempty-message="Address cannot be empty">
+            >
            </div>
          </div>
 
@@ -494,7 +493,7 @@
 
            </div>
          </div>
-         <button id="withdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
+         <button id="placeWithdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
 
        </form>
      </div>
