--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -186,7 +186,7 @@
          <button id="buyBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
          <button id="issueBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
          <button id="changeRewardBtn" type="button" class="btn btn-primary btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
-
+         <button id="withdrawBtn" type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
        </div>
      </div>
    </div>
@@ -242,7 +242,7 @@
         </div>
         <div class="panel-footer">
           <ul class="pager">
-          <li id="creators_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
+            <li id="creators_activity_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
             <li id="creators_activity_pager_next" ><a href="javascript:void(0);">Next</a></li>
           </ul>
         </div>
@@ -701,7 +701,7 @@
          <div class="form-group form-group-lg">
 
            <label class="col-sm-2 control-label" for="formGroupInputLarge">Funds</label>
-           <div name="usersFunds" class="col-sm-10 form-control-static">
+           <div name="creatorsFunds" class="col-sm-10 form-control-static">
 
            </div>
          </div>
@@ -790,6 +790,76 @@
  </div>
 </div>
 
+<div id="withdrawModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">withdraw</h4>
+      </div>
+      <div class="modal-body">
+        <form id="withdrawForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
+            <div class="col-sm-10">
+              <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
+
+              >
+            </div>
+
+
+          </div>
+
+          <div class="form-group form-group-lg">
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Bitcoin Address</label>
+
+
+           <div class="col-sm-10">
+             <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+             >
+           </div>
+         </div>
+
+
+         <div class="form-group form-group-lg">
+
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Total after 5% fee</label>
+           <div id="withdrawAmountAfterFee" class="col-sm-10 form-control-static">
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Your Funds</label>
+           <div id="funds" class="col-sm-10 form-control-static">
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Funds After</label>
+           <div id="fundsLeft" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+
+         <div class="form-group form-group-lg">
+
+           <label class="col-sm-2 control-label" for="formGroupInputLarge">Safety Rating After</label>
+           <div id="safetyRatingAfter" class="col-sm-10 form-control-static">
+
+           </div>
+         </div>
+
+         <button id="placeWithdrawBtn" type="submit" class="btn btn-primary">Withdraw</button>
+
+       </form>
+     </div>
+
+   </div>
+ </div>
+</div>
+
 <div id="rewardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
@@ -823,6 +893,9 @@
       </div>
     </div>
   </div>
+
+
+
 
 
   <!-- end of wrapper -->
