--- a/resources/dev/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/dev/web/creators_pages/Leonardo_Davinci.html
@@ -65,7 +65,7 @@
          <li><a href="#">One more separated link</a></li> 
         </ul> </li> 
       </ul> 
-      <form id="creator_search" class="navbar-form navbar-left" role="search"> 
+      <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search"> 
        <div class="form-group"> 
         <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator..." /> 
        </div> 
