--- a/resources/stage/web/creator_funds.html
+++ b/resources/stage/web/creator_funds.html
@@ -89,7 +89,7 @@
                	</ul>
                </li>
              </ul>
-             <form id="creator_search" class="navbar-form navbar-left" role="search">
+             <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search">
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
