--- a/resources/stage/web/carousel.html
+++ b/resources/stage/web/carousel.html
@@ -409,15 +409,15 @@ data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Fund <span class="text-muted">creativity </span></h2>
-              <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-muted">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-muted">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="#">issuing pieces</a> of their brand, and repaying their funders with monetary <a href="#">rewards</a> over time. 
-              Fund projects in the Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. </p>
+              <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-muted">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-muted">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="#">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="#">rewards</a> over time. 
+              Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. </p>
               </div>
             </div>
 
             <hr class="featurette-divider">
             <div class="row featurette">
               <div class="col-md-7">
-                <h2 class="featurette-heading">The world's first <span class="text-muted">International</span> funding platform</h2>
+                <h2 class="featurette-heading">The world's first <span class="text-muted">international</span> funding platform</h2>
                 <p class="lead">Using the bitcoin network as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20 currencies</b>, on an interactive, funding <b>dashboard</b>. Coinbase is used as the payment processor, which ensures free transactions within the bitcoin network.
                   <!-- Button trigger modal -->
                   <!-- Standard button -->
@@ -437,7 +437,7 @@ data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
                 <img class="featurette-image img-responsive" data-src="holder/holder.js/500x500/auto" alt="Generic placeholder image">
               </div>
               <div class="col-md-7">
-                <h2 class="featurette-heading">Zero fees on a <span class="text-muted">Secure platform </span></h2>
+                <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
                 <p class="lead">Similar to other funding sites, content-creators pay a <b>5%</b> fee, but for funders, the experience of buying and trading pieces is entirely <b>free</b>. </p>
               </div>
             </div>
@@ -446,7 +446,7 @@ data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
 
             <div id="last" class="row featurette">
               <div class="col-md-7">
-                <h2 class="featurette-heading">The first <span class="text-muted">Open Source</span> funding platform</h2>
+                <h2 class="featurette-heading">The first <span class="text-muted">open source</span> funding platform</h2>
                 <p class="lead">The source code of the entire project is open-source, hosted on <a href="#">github</a>. In addition, an open trading API is in development, to allow funders to buy and sell pieces programmatically. </p>
 
               </div>
