--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -457,7 +457,7 @@
         <form id="withdrawForm" class="form-horizontal" role="form">
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
-            <div id="withdrawSymbol" class="input-group-addon">@</div>
+            <div id="withdrawSymbol" class="col-sm-1 input-group-addon">@</div>
             <div class="col-sm-10">
               <input name="withdrawAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
               data-bv-greaterthan="true"
